testsuite/tests/properties/invalid_and_or/bool_eq.lkt
import common

class Example: FooNode implements TokenNode {
    @ignored fun f(b: Bool, e: Equation): Bool = b and e
}
